# sampledrop

./: README.md  pyproject.toml  requirements.txt  samplewatch.example.toml
alfred/: README.md  alfred_filter.py  alfred_run.sh  info.plist
scripts/: build_alfred_workflow.py  install.sh  uninstall.sh  upgrade.sh
src/samplewatch/: __init__.py  audio.py  cli.py  config.py  core.py
