[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samplewatch"
version = "0.1.0"
description = "Small macOS-friendly watcher for organizing incoming audio samples."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "soundfile>=0.12",
  "watchdog>=4.0",
]

[project.scripts]
samplewatch = "samplewatch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
